testsuite/gnatprove/tests/ug__access1/test.out
 error: dereference from "X" is not readable
--> test.adb:9:21
    9 |       pragma Assert (X.all = 11); --  but X cannot, or we would have an alias
      |                      ~~^~~
      + object was moved at line 6 [E0010]
    6 |       Y := X;                     --  ownership of X is transferred to Y
      |            ^
      + launch "gnatprove --explain=E0010" for more information
gnatprove: error during flow analysis and proof
